--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "postcss-preset-env": "6.7.0",
     "postcss-px2rem-exclude": "0.0.6",
     "postcss-safe-parser": "4.0.1",
+    "rc-form": "^2.4.11",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
